[project]
name = "gcp-log-hit-checker"
version = "0.1.4"
description = "Check for hits against google cloud logging"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Jonas Vacek" }
]
keywords = ["gcp", "google-cloud", "logging", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = [
    "google-cloud-logging>=3.15.0",
    "rich>=14.3.3",
]

[project.urls]
Homepage = "https://github.com/jvacek/gcp_log_hit_checker"
Repository = "https://github.com/jvacek/gcp_log_hit_checker"
Issues = "https://github.com/jvacek/gcp_log_hit_checker/issues"

[project.scripts]
gcp-log-hit-checker = "gcp_log_hit_checker.main:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 120
